# backend-h3

./: .gitignore  Cargo.toml  README.md  data.db-shm  data.db-wal
migrations/: 20250117134303_create_users_table.sql  20250422121059_create_gdpr_tables.sql  20250615000001_consent_history_data_retention.sql  gdpr_init.sql
rest/: gpdr.rest  users.rest
scripts/: breach_scan.sh  run_data_retention.rs
src/: auth.rs  breach_detection.rs  gdpr.rs  main.rs  models.rs
src/routes/: breach_routes.rs  gdpr_routes.rs  mod.rs  user_routes.rs
